--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
+
+    <!-- inicio de offCanvas -->
+    <div class="offcanvas offcanvas-start" id="demo1">
+      <div class="offcanvas-header">
+        <h1 class="offcanvas-title">Redes sociales</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
+      </div>
+      <div class="offcanvas-body">
+        <p><a href="https://www.facebook.com/" target="_blank">Facebook</a></p>
+        <p><a href="https://www.instagram.com/" target="_blank">Instagram</a></p>
+        <p><a href="https://x.com/twitter?lang=es" target="_blank">Twitter</a></p>
+      </div>
+    </div>
+
+    <!-- fin de offCanvas -->
+
   <!-- Inicio de Carousel -->
   <div id="demo" class="carousel slide" data-bs-ride="carousel">
 
@@ -187,7 +203,88 @@
         </div>
       </div>
       <!-- fin de card (tarjeta) -->
-  
+
+      <!-- inicio de boton offcanvas-->
+
+      <div class="container-fluid mt-3">
+        <h3>Offcanvas Sidebar</h3>
+        <p>Offcanvas is similar to modals, except that it is often used as a sidebar.</p>
+        <button class="btn btn-success" type="button" data-bs-toggle="offcanvas" data-bs-target="#demo1">
+          Open Offcanvas Sidebar
+        </button>
+      </div>
+      <!-- fin de boton offcanvas -->
+      
+
+      <!-- inicio de collapse -->
+      <div class="container mt-3">
+        <h2>Accordion Example</h2>
+        <p><strong>Note:</strong> The <strong>data-bs-parent</strong> attribute makes sure that all collapsible elements under the specified parent will be closed when one of the collapsible item is shown.</p>
+        <div id="accordion">
+          <div class="card">
+            <div class="card-header">
+              <a class="btn" data-bs-toggle="collapse" href="#collapseOne">
+                Collapsible Group Item #1
+              </a>
+            </div>
+            <div id="collapseOne" class="collapse show" data-bs-parent="#accordion">
+              <div class="card-body">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-header">
+              <a class="collapsed btn" data-bs-toggle="collapse" href="#collapseTwo">
+              Collapsible Group Item #2
+            </a>
+            </div>
+            <div id="collapseTwo" class="collapse" data-bs-parent="#accordion">
+              <div class="card-body">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-header">
+              <a class="collapsed btn" data-bs-toggle="collapse" href="#collapseThree">
+                Collapsible Group Item #3
+              </a>
+            </div>
+            <div id="collapseThree" class="collapse" data-bs-parent="#accordion">
+              <div class="card-body">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-header">
+              <a class="collapsed btn" data-bs-toggle="collapse" href="#collapseFour">
+              Collapsible Group Item #4
+            </a>
+            </div>
+            <div id="collapseFour" class="collapse" data-bs-parent="#accordion">
+              <div class="card-body">
+                <iframe src="archivos/archivo2.pdf" frameborder="0" width="100%" height="500px"></iframe>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-header">
+              <a class="collapsed btn" data-bs-toggle="collapse" href="#collapseFive">
+              Collapsible Group Item #5
+            </a>
+            </div>
+            <div id="collapseFive" class="collapse" data-bs-parent="#accordion">
+              <div class="card-body">
+                <video src="videos/video2.mp4" controls width="100%"></video>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div><br>
+       <!-- fin de collapse -->
+
 
     <div class="container-fluid">
 
@@ -252,17 +349,6 @@
     <footer style="background-color: black;">
         <p style="color: white;"> Página creada por Alexandra Bautusta &copy; 2025</p>
     </footer>
-
-
-
-
-
-
-
-
-
-
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
